dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)
AC_CONFIG_HEADER(config.h)
AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
#AC_PROG_CXX

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.

dnl Check for command line arguments

# Simgrid
AC_ARG_WITH(simgrid,
            [  --with-simgrid     Path to the SimGrid software],
            [SIMGRID_INCLUDE="-I${withval}/include/";
	     SIMGRID_LIB="${withval}/lib/libsimgrid.a"],
            [SIMGRID_INCLUDE="";
	     SIMGRID_LIB=""])

# Appleseeds
AC_ARG_WITH(appleseeds,
            [  --with-appleseeds     Path to the AppleSeeds software],
            [APPLESEEDS_INCLUDE="-I${withval}/include/";
	     APPLESEEDS_LIB="${withval}/lib/libappleseeds.a"],
            [APPLESEEDS_INCLUDE="";
	     APPLESEEDS_LIB=""])


dnl ****************************************************
dnl **  Globus
AC_CHECKING(for Globus)
if test -z "$GLOBUS_LOCATION"; then
  GLOBUS_LDFLAGS=""
  GLOBUS_INCLUDE=""
  GLOBUS_LIBS=""
else
  GLOBUS_LDFLAGS="-L${GLOBUS_LOCATION}/lib"
  GLOBUS_INCLUDE="-I${GLOBUS_LOCATION}/include/gcc32dbgpthr"
  GLOBUS_LIBS="-lglobus_gram_client_gcc32dbg"
#  AC_DEFINE_UNQUOTED(HAVE_GLOBUS, 1)
fi

# VI options?

#	     VI_LIB="${withval}/lib/libviinterface.a ${withval}/lib/libvimanager.a ${withval}/lib/libproject.a ${withval}/lib/libresourcemanager.a ${withval}/lib/libparameters.a ${withval}/lib/libvidb.a ${withval}/lib/libproject.a ${withval}/lib/libactuator.a ${withval}/lib/libplan.a ${withval}/lib/libvicore.a $(withval}/lib/libvimisc.a -lmysqlclient_r -lz -lpthread";
AC_ARG_WITH(vi,
            [  --with-vi     Virtual Instrument simulated user],
            [VI_INCLUDE="-I${withval}/include/"; 
	     VI_LIBVIINTERFACE="${withval}/lib/libviinterface.a";
	     VI_LIBVIMANAGER="${withval}/lib/libvimanager.a";
	     VI_LIBPROJECT="${withval}/lib/libproject.a";
	     VI_LIBVIRESOURCEMANAGER="${withval}/lib/libresourcemanager.a";
	     VI_LIBPARAMETERS="${withval}/lib/libparameters.a";
	     VI_LIBVIDB="${withval}/lib/libvidb.a";
	     VI_LIBACTUATOR="${withval}/lib/libactuator.a";
	     VI_LIBPLAN="${withval}/lib/libplan.a";
	     VI_LIBVICORE="${withval}/lib/libvicore.a";
	     VI_LIBVIMISC="${withval}/lib/libvimisc.a";
	     VI_LIBEXTERNAL="-lmysqlclient_r -lz -lpthread";
	     AC_DEFINE(VI_USER)],
             VI_INCLUDE="";
	     VI_LIB="")

AC_ARG_WITH(mysql-lib,
                [  --with-mysql-lib        path to the mysql client library],
                [  MYSQL_LDFLAGS="-L${withval}"  ],
                [  MYSQL_LDFLAGS="" ])



if test -n "$VI_INCLUDE"; then

  dnl ****************************************************
  dnl **** mysql-lib
  if test -z "${MYSQL_LDFLAGS}"; then
    if test -f "/usr/local/mysql/lib/libmysqlclient_r.a"; then
      MYSQL_LDFLAGS="-L/usr/local/mysql/lib/"
    fi
  fi

  if test -z "${MYSQL_LDFLAGS}"; then
    if test -f "/usr/lib/libmysqlclient_r.a"; then
      MYSQL_LDFLAGS="-L/usr/lib/"
    fi
  fi

  if test -z "${MYSQL_LDFLAGS}"; then
    if test -f "/usr/lib/mysql/libmysqlclient_r.a"; then
      MYSQL_LDFLAGS="-L/usr/lib/mysql/"
    fi
  fi

  if test -z "${MYSQL_LDFLAGS}"; then
    if test -f "/usr/local/lib/libmysqlclient_r.a"; then
      MYSQL_LDFLAGS="-L/usr/local/lib/"
    fi
  fi

  if test -z "${MYSQL_LDFLAGS}"; then
    if test -f "/usr/local/lib/mysql/libmysqlclient_r.a"; then
      MYSQL_LDFLAGS="-L/usr/local/lib/mysql/"
    fi
  fi

  if test -z "${MYSQL_LDFLAGS}"; then
    echo "** Error ** Can't find libmysqlclient.a. Use --with-mysql-lib";
    exit 1;
  fi
fi


dnl *********************************************************
dnl *** libz
AC_ARG_WITH(libz,
              [ --with-libz       path to the libz compression library ],
              [ LIBZ_LDFLAGS="-L${withval}" ],
              [ LIBZ_LDFLAGS=""])
if test -z "${LIBZ_LDFLAGS}"; then
  if test -f "/usr/lib/libz.a"; then
    LIBZ_LDFLAGS="-L/usr/lib"
  fi
fi

AC_SUBST(SIMGRID_INCLUDE)
AC_SUBST(SIMGRID_LIB)
AC_SUBST(APPLESEEDS_INCLUDE)
AC_SUBST(APPLESEEDS_LIB)
AC_SUBST(VI_INCLUDE)
AC_SUBST(VI_LIBVIINTERFACE)
AC_SUBST(VI_LIBVIMANAGER)
AC_SUBST(VI_LIBPROJECT)
AC_SUBST(VI_LIBVIRESOURCEMANAGER)
AC_SUBST(VI_LIBPARAMETERS)
AC_SUBST(VI_LIBVIDB)
AC_SUBST(VI_LIBACTUATOR)
AC_SUBST(VI_LIBPLAN)
AC_SUBST(VI_LIBVICORE)
AC_SUBST(VI_LIBVIMISC)
AC_SUBST(VI_LIBEXTERNAL)
AC_SUBST(GLOBUS_LDFLAGS)
AC_SUBST(GLOBUS_INCLUDE)
AC_SUBST(GLOBUS_LIBS)
AC_SUBST(MYSQL_LDFLAGS)
AC_SUBST(MYSQL_INCLUDE)
AC_SUBST(LIBZ_LDFLAGS)

AC_OUTPUT(Makefile)
